--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.TravelTracker_Project"
         tools:targetApi="31">
         <activity
+            android:name=".SaveTripActivityStep3"
+            android:exported="false" />
+        <activity
+            android:name=".SaveTripActivityStep2"
+            android:exported="false" />
+        <activity
+            android:name=".SaveTripActivityStep1"
+            android:exported="false" />
+        <activity
             android:name=".HomeActivity"
             android:exported="false" />
         <activity
