--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,18 @@
         tools:targetApi="31">
         <activity
             android:name=".DetailsTripActivity"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".HistoryActivity"
             android:exported="false" />
         <activity
             android:name=".SaveTripActivityStep2"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".SaveTripActivityStep1"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".HomeActivity"
