--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,6 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TravelTracker_Project"
         tools:targetApi="31">
+        <activity
+            android:name=".SaveTripActivityStep4"
+            android:exported="false" />
+        <activity
+            android:name=".SaveTripActivityStep3"
+            android:exported="false" />
         <activity
             android:name=".DetailsTripActivity"
             android:exported="false" />
@@ -44,6 +48,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
@@ -51,7 +56,7 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths"/>
+                android:resource="@xml/file_paths" />
         </provider>
     </application>
 
